Fixing spacing on mobile navbar

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -233,6 +233,10 @@ body {
     display: none;
   }
 
+  .nav-inner {
+  justify-content: space-between;
+}
+
   .hamburger {
     display: block;
   }
